--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
   <head>
+
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>مشروع الكفيل الخيري</title>
+    <link rel="icon" href="/logo.svg">
+    <!-- <link rel="shortcut icon" href="./src/images/logo.svg" type="image/x-icon"> -->
   </head>
   <body>
     <div id="app"></div>
